[gd_scene load_steps=4 format=3 uid="uid://chritb40fko8m"]

[ext_resource type="Script" path="res://src/core/battle/BattleSystemManager.gd" id="1_script"]
[ext_resource type="Script" path="res://src/core/battle/MainBattleController.gd" id="2_script"]
[ext_resource type="Script" path="res://src/data/resources/Terrain/UnifiedTerrainSystem.gd" id="3_script"]

[node name="Battle" type="Node"]
script = ExtResource("1_script")

[node name="MainBattleController" type="Node" parent="."]
script = ExtResource("2_script")

[node name="TerrainSystem" type="Node" parent="."]
script = ExtResource("3_script")

[node name="Units" type="Node" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
